# aquafin-win

./: .gitignore  Cargo.toml  README.md  config.example.toml  justfile
src/: audio.rs  cli.rs  config.rs  error.rs  lib.rs  main.rs  paths.rs  theme.rs  video.rs
src/api/: auth.rs  client.rs  items.rs  mod.rs  models.rs  playback.rs
src/ui/: app.rs  browse.rs  cheatsheet.rs  details.rs  error_modal.rs  images.rs  keymap.rs  layout.rs  mod.rs  now_playing.rs  playback.rs  theme_picker.rs  wizard.rs
src/ui/panes/: content.rs  context_pane.rs  library_items.rs  library_sections.rs  mod.rs  top_bar.rs
themes/: catppuccin-frappe.toml  catppuccin-latte.toml  catppuccin-macchiato.toml  catppuccin-mocha.toml  default.toml  example.toml
