[package]
name = "aquafin"
version = "0.1.0"
edition = "2021"
description = "Jellyfin TUI client for the terminal."
license = "GPL-3.0-or-later"
readme = "README.md"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
directories = "6.0.0"
image = "0.25.10"
ratatui = "0.30.0"
ratatui-image = { version = "11.0.2", default-features = false, features = ["image-defaults", "crossterm"] }
reqwest = { version = "0.13.4", features = ["json", "query"] }
rodio = "0.22.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
symphonia = { version = "0.6.0", features = ["all-codecs", "all-formats"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = "0.3.23"
uuid = { version = "1.23.1", features = ["v4"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }

[target.'cfg(windows)'.dependencies]
keyring = { version = "3", features = ["windows-native"] }
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Console", "Win32_Storage_FileSystem", "Win32_System_Pipes"] }

[dev-dependencies]
tempfile = "3.27.0"
wiremock = "0.6.5"
